<resources>
    <string name="app_name">Breaking Bad</string>
    <string name="button_text">Login</string>
    <string name="login_screen_username">USERNAME</string>
    <string name="login_screen_password">PASSWORD</string>
    <string name="login_screen_don_t_have_an_account">Don’t have an account?</string>
    <string name="login_screen_register">REGISTRATION</string>
    <string name="confirm_password_input_title">CONFIRM PASSWORD</string>
    <string name="name_input_text_title">NAME</string>
    <string name="back_button_text">BACK</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_title">Forgot your password?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_pa_w0rd">Enter your pa$$w0rd</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_pa_w0rd">Enter pa$$w0rd</string>
    <string name="confirm_pa_w0rd">Confirm pa$$w0rd</string>
    <string name="common_Ok">OK</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved_items">Saved Items</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="email_support">Email Support</string>
    <string name="enter_username_or_password">Please enter username and password</string>
    <string name="common_error" translatable="false">Error</string>
    <string name="common_note" translatable="false">Note</string>
    <string name="common_unknown_error" translatable="false">Unknown error</string>
    <string name="successfully_registration">Registration is successfully. Please login</string>
    <string name="characters_title_home_screen">Characters</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="common_no_connection" translatable="false">No internet connection</string>
    <string name="login_screen_wrong_credentials" translatable="false">Wrong Credentials</string>
    <string name="details" translatable="false">Details</string>
    <string name="birthday" translatable="false">Birthday</string>
    <string name="status" translatable="false">Status</string>
    <string name="portrayed" translatable="false">Portrayed</string>
    <string name="appearance" translatable="false">Appearance</string>
    <string name="btn_add" translatable="false">Add</string>
    <string name="card_details_add" translatable="false">Add</string>
    <string name="card_details_remove" translatable="false">Delete</string>
    <string name="card_details_login" translatable="false">Log In</string>
    <string name="season">Season</string>
    <string name="georgian_lang" translatable="false">ქართული</string>
    <string name="english_lang" translatable="false">English</string>
    <string name="registration_error_empty_username" translatable="false">Empty username</string>
    <string name="registration_error_empty_name" translatable="false">Empty name</string>
    <string name="registration_error_empty_password" translatable="false">Empty password</string>
    <string name="registration_error_passwords_not_matching" translatable="false">Passwords not matching</string>
    <string name="by_saved_item_screen">By</string>
    <string name="quotes">quotes</string>
    <string name="episode_series">Episode</string>

</resources>