<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_registration_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_insets"
    android:paddingEnd="@dimen/screen_insets"
    android:weightSum="1"
    tools:context=".MainActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/splash" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/login_screen_username"
        android:textAppearance="@style/UsernameAndPasswordTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        tools:text="Please enter your name"
        tools:textColor="@color/black_200" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login_screen_password"
        android:textAppearance="@style/UsernameAndPasswordTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:inputType="textPassword"
        tools:text="enter password"
        tools:textColor="@color/black_200" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/button_text" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="180dp"
        android:text="@string/login_screen_don_t_have_an_account"
        android:textAppearance="@style/RegistrationTextTitleBottom" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="8dp"
        android:text="@string/login_screen_register"
        android:textAppearance="@style/RegistrationTextBottom" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

</androidx.appcompat.widget.LinearLayoutCompat>