<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TextBlack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_path_14"
            app:layout_constraintBottom_toBottomOf="@id/gdTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/backBtnTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/gotham_bold"
            android:padding="2dp"
            android:text="@string/back_button_text"
            android:textColor="@color/black_200"
            app:layout_constraintBottom_toBottomOf="@id/backArrow"
            app:layout_constraintStart_toEndOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="@id/backArrow" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_44dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/_44dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_44dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="@dimen/_44dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/joinedLogoImageViewRegScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/splash"
            app:layout_constraintBottom_toTopOf="@+id/registrationTvRegScr"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/gdStart"
            app:layout_constraintTop_toTopOf="@id/gdTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationTvRegScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="2dp"
            android:textAllCaps="true"
            android:text="@string/login_screen_register"
            android:textAppearance="@style/RegistrationTextBottom"
            app:layout_constraintBottom_toTopOf="@+id/nameInputEt"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/joinedLogoImageViewRegScr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/usernameTitleTvRegScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="2dp"
            android:textAllCaps="true"
            android:text="@string/name_input_text_title"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/nameInputEt"
            app:layout_constraintStart_toStartOf="@+id/nameInputEt" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameInputEt"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_name"
            app:layout_constraintBottom_toTopOf="@+id/userNameInputEt"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/registrationTvRegScr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username2TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="2dp"
            android:textAllCaps="true"
            android:text="@string/login_screen_username"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/userNameInputEt"
            app:layout_constraintStart_toStartOf="@+id/userNameInputEt" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userNameInputEt"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_username"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputEt"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/nameInputEt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTitleTvRegScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="2dp"
            android:textAllCaps="true"
            android:text="@string/login_screen_password"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputEt"
            app:layout_constraintStart_toStartOf="@+id/passwordInputEt" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInputEt"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_pa_w0rd"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInputEt"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/userNameInputEt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/password2TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="2dp"
            android:textAllCaps="true"
            android:text="@string/confirm_password_input_title"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInputEt"
            app:layout_constraintStart_toStartOf="@+id/passwordConfirmInputEt" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordConfirmInputEt"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:hint="@string/confirm_pa_w0rd"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/registrationButton"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputEt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrationButton"
            style="@style/BigButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_background"
            android:textAllCaps="true"
            android:text="@string/register_button"
            app:layout_constraintBottom_toTopOf="@+id/forgotPasswordTitle"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputEt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="12dp"
            android:visibility="invisible"
            android:padding="2dp"
            android:text="@string/forgot_password_title"
            android:textAppearance="@style/RegistrationTextTitleBottom"
            app:layout_constraintBottom_toBottomOf="@id/gdBottom"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/registrationButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

