<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="44dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="44dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="44dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="44dp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/joinedLogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/splash"
            app:layout_constraintBottom_toTopOf="@+id/usernameInputEditText"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toTopOf="@id/gdTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/usernameTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/login_screen_username"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/usernameInputEditText"
            app:layout_constraintStart_toStartOf="@+id/usernameInputEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameInputEditText"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_username"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputEditText"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/joinedLogoImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/login_screen_password"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordInputEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInputEditText"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_pa_w0rd"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/BigButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/button_text"
            app:layout_constraintBottom_toTopOf="@+id/registrationTitleTextView"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputEditText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/login_screen_don_t_have_an_account"
            android:textAppearance="@style/RegistrationTextTitleBottom"
            app:layout_constraintBottom_toTopOf="@+id/registrationTextView"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login_screen_register"
            android:textAppearance="@style/RegistrationTextBottom"
            app:layout_constraintBottom_toBottomOf="@id/gdBottom"
            app:layout_constraintEnd_toEndOf="@+id/registrationTitleTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/registrationTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/registrationTitleTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>