<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryTextColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="44dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="44dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="44dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="44dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/joinedLogoImageViewLogScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/splash"
            app:layout_constraintBottom_toTopOf="@+id/userNameInput"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toTopOf="@id/gdTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/usernameTitleTvLogScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="2dp"
            android:text="@string/login_screen_username"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/userNameInput"
            app:layout_constraintStart_toStartOf="@+id/userNameInput" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userNameInput"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_username"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/joinedLogoImageViewLogScr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTitleTvLogScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="2dp"
            android:text="@string/login_screen_password"
            android:textAppearance="@style/UsernameAndPasswordTitle"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/passwordInput" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInput"
            style="@style/InputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_pa_w0rd"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/loginButtonLogScr"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/userNameInput" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButtonLogScr"
            style="@style/BigButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/button_text"
            app:layout_constraintBottom_toTopOf="@+id/registrationTitleTvLogScr"
            app:layout_constraintEnd_toEndOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationTitleTvLogScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:padding="2dp"
            android:text="@string/login_screen_don_t_have_an_account"
            android:textAppearance="@style/RegistrationTextTitleBottom"
            app:layout_constraintBottom_toTopOf="@+id/registrationTvLogScr"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/loginButtonLogScr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registrationTvLogScr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:padding="2dp"
            android:text="@string/login_screen_register"
            android:textAppearance="@style/RegistrationTextBottom"
            app:layout_constraintBottom_toBottomOf="@id/gdBottom"
            app:layout_constraintEnd_toEndOf="@+id/registrationTitleTvLogScr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/registrationTitleTvLogScr"
            app:layout_constraintTop_toBottomOf="@+id/registrationTitleTvLogScr" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>